# nanodet

./: .gitignore
demo/: demo.py  demo_copy.py  运行指令.txt
demo_libtorch/: CMakeLists.txt  main.cpp  nanodet_libtorch.cpp  nanodet_libtorch.h  运行指令.txt
demo_openvino/: CMakeLists.txt  nanodet_openvino.cpp  使用记录.txt  运行指令.txt
nanodet/model/arch/: one_stage_detector.py
tools/: convert_old_checkpoint.py  export_onnx.py  export_torchscript.py
